[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/Montserrat-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/pause.gd" type="Script" id=2]
[ext_resource path="res://fonts/DELTARUNE-font-size32.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/DELTARUNE-font-size64.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/DELTARUNE-font-size128.tres" type="DynamicFont" id=5]
[ext_resource path="res://fonts/DELTARUNE-font-size16.tres" type="DynamicFont" id=6]

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[node name="pause" type="Node2D"]
position = Vector2( -5, 0 )
script = ExtResource( 2 )

[node name="pauseBox" type="ColorRect" parent="."]
margin_left = 5.0
margin_right = 1445.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0.784314 )

[node name="continue" type="Button" parent="."]
margin_left = 520.0
margin_top = 200.0
margin_right = 920.0
margin_bottom = 305.0
custom_fonts/font = ExtResource( 4 )
text = "Continue"

[node name="restart" type="Button" parent="."]
margin_left = 520.0
margin_top = 350.0
margin_right = 920.0
margin_bottom = 455.0
custom_fonts/font = ExtResource( 4 )
text = "Restart"

[node name="fullscreen" type="CheckBox" parent="."]
margin_left = 356.0
margin_top = 463.0
margin_right = 501.0
margin_bottom = 509.0
rect_scale = Vector2( 5, 5 )
custom_fonts/font = SubResource( 3 )
pressed = true

[node name="fullscreenLabel" type="Label" parent="."]
margin_left = 481.0
margin_top = 539.0
margin_right = 1009.0
margin_bottom = 670.0
custom_fonts/font = ExtResource( 4 )
text = "Toggle fullscreen (F)"

[node name="exit" type="Button" parent="."]
margin_left = 420.0
margin_top = 700.0
margin_right = 1020.0
margin_bottom = 924.0
custom_fonts/font = ExtResource( 5 )
text = "RUN AWAY!!!"

[node name="restartBox" type="ColorRect" parent="."]
visible = false
margin_left = 220.0
margin_top = 240.0
margin_right = 1220.0
margin_bottom = 840.0
color = Color( 0, 0, 0, 0.784314 )

[node name="restartYes" type="Button" parent="restartBox"]
margin_left = 600.0
margin_top = 300.0
margin_right = 900.0
margin_bottom = 500.0
custom_fonts/font = ExtResource( 5 )
text = "YES"

[node name="restartNo" type="Button" parent="restartBox"]
margin_left = 100.0
margin_top = 300.0
margin_right = 400.0
margin_bottom = 500.0
custom_fonts/font = ExtResource( 5 )
text = "NO"

[node name="Label" type="Label" parent="restartBox"]
margin_left = 100.0
margin_top = 100.0
margin_right = 900.0
margin_bottom = 203.0
custom_fonts/font = ExtResource( 4 )
text = "ARE YOU SURE? AFTER THIS THERE IS
[NO GOING BACK!]"
align = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="songSelect" type="OptionButton" parent="CanvasLayer"]
margin_left = 30.0
margin_top = 115.0
margin_right = 470.0
margin_bottom = 161.0
custom_fonts/font = ExtResource( 3 )
text = "Pick a song"

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 33.0
margin_top = 71.0
margin_right = 252.0
margin_bottom = 111.0
custom_fonts/font = ExtResource( 3 )
text = "Pick a song"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 45.0
margin_top = 989.0
margin_right = 328.0
margin_bottom = 1040.0
custom_fonts/normal_font = ExtResource( 6 )
text = "Credits:
Inspired by DELTARUNE by Toby Fox
Music and pipis sprites owned by Toby Fox"

[connection signal="pressed" from="continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="restart" to="." method="_on_restart_pressed"]
[connection signal="toggled" from="fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="restartBox/restartYes" to="." method="_on_restartYes_pressed"]
[connection signal="pressed" from="restartBox/restartNo" to="." method="_on_restartNo_pressed"]
[connection signal="item_selected" from="CanvasLayer/songSelect" to="." method="_on_songSelect_item_selected"]
[connection signal="pressed" from="CanvasLayer/songSelect" to="." method="_on_songSelect_pressed"]
